# camera_calibration

./: .gitignore  .gitmodules  .styleguide-license  CMakeLists.txt  README.md  casadi_cal.py  main.cpp
.github/workflows/: build.yml
include/: camera_cal.hpp
resources/: corners.vnl  corners_c920_1600_896.csv  photon_calibration_Microsoft_LifeCam_HD-3000_1280x720.json
src/: EigenFormat.hpp  camera_cal.cpp  fmt_help.h  main.cpp
